--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@line/bot-sdk",
-  "version": "__LINE_BOT_SDK_NODEJS_VERSION__",
+  "version": "8.4.1",
   "description": "Node.js SDK for LINE Messaging API",
   "engines": {
     "node": ">=18"
